# six_nations_solver

./: .gitignore  LICENSE.TXT  README.md  pred_out.csv  pyproject.toml  requirements.txt  test.csv
data/: example_2025_gw1.csv
src/: __init__.py
src/six_nations_solver/: __init__.py  config.py  path_config.py  six_nations_solver.py
src/solvers/: __init__.py  config.py  six_nations_solver.py
src/utils/: __init__.py  logger.py
