[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "six_nations_solver"
version = "1.0.1"
description = "A python client to optimise Fantasy Six Nations."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Alexander Gardner" }
]
dependencies = [
]
requires-python = ">=3.7"

[tool.setuptools.packages.find]
where = ["src"]
include = ["six_nations_solver*"]
